DowhileNode Functional NEXT: FOrNode , FunctionCallNode, IFNode
Before Mega Redundancy!!!!!